# BranchForge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPRINT_00_REPORT.md  SPRINT_01_REPORT.md  SPRINT_02_REPORT.md  SPRINT_03_REPORT.md  SPRINT_04_REPORT.md  SPRINT_05_REPORT.md  SPRINT_06_REPORT.md
.cargo/: config.toml
crates/app_host/: Cargo.toml
crates/app_host/src/: console_runner.rs  errors.rs  lib.rs  main.rs  operations.rs  recent_repos.rs
crates/app_host/tests/: branch_workflow_smoke.rs  commit_polish_search_tags_smoke.rs  console_runner_smoke.rs  foundation_regression_suite.rs  history_diff_e2e.rs  history_fixture_smoke.rs  mvp_smoke_suite.rs  open_repo_flow_smoke.rs  post_mvp_smoke_baseline.rs  rebase_beta_smoke.rs  runtime_invoke_response_e2e.rs  safety_regression_suite.rs  sprint16_advanced_ops_smoke.rs  sprint17_interactive_rebase_smoke.rs  sprint18_conflict_recovery_smoke.rs  sprint19_power_staging_smoke.rs  sprint20_repository_productivity_smoke.rs  sprint21_advanced_git_features_smoke.rs  sprint22_plugin_extensibility_smoke.rs  sprint23_beta_hardening_smoke.rs  ui_state_contract_smoke.rs
plugin_registry/: registry.json
scripts/: check-deps.sh  dev-check.sh  dev-run-host.sh  dev-run-local.sh  generate-release-notes.sh  package-local.sh  package-release.sh  sign-artifacts.sh  verify-sprint-00.sh  verify-sprint-01.sh  verify-sprint-02.sh  verify-sprint-03.sh  verify-sprint-04.sh  verify-sprint-05.sh  verify-sprint-06.sh  verify-sprint-07.sh  verify-sprint-08.sh  verify-sprint-09.sh  verify-sprint-10.sh  verify-sprint-11.sh  verify-sprint-12.sh  (+10 more)
(+111 files in other folders)
