[workspace]
members = [
  "crates/app_host",
  "crates/plugin_api",
  "crates/plugin_host",
  "crates/action_engine",
  "crates/state_store",
  "crates/job_system",
  "crates/git_service",
  "crates/ui_shell",
  "plugins/repo_manager",
  "plugins/status",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Branchforge Contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.dev]
debug = 1
